--- a/assets/css/_footer.css
+++ b/assets/css/_footer.css
@@ -2,196 +2,221 @@
 .footer {
 	height: auto;
 	width: 100%;
-	background-color: var(--color-dark);
-	
+}
+
+.footer-content {
+	padding: 4rem;
+	margin: 2.5rem 0;
+	color: var(--color-light-hover);
+	border-radius: 24px;
+    background: var(--color-dark);
+    box-shadow: 0 8px 32px var(--color-dark);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
 }
 
 .footer-navigation {
 	height: auto;
 	width: 100%;
-	padding: 5rem 0 2rem 0;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	border-top: 1px solid var(--color-border);
+	margin-bottom: 7.5rem;
 }
 
 .footer-navigation .item-title {
-	font-size: 1.8rem;
+	font-size: 2rem;
 	line-height: 2;
 	color: var(--color-text-light);
-	font-weight: var(--font-weight-bold);
 	text-align: left;
+    font-weight: var(--font-weight-normal);
+    font-family: var(--font-family-1);
+    transition: 0.3s ease;
 }
 
 .footer-navigation a {
-	line-height: 2;
 	font-size: 1.6rem;
-    color: var(--color-text-dark);
-    font-weight: var(--font-weight-bold);
+	line-height: 2;
+	color: var(--color-text-hover);
+	text-align: left;
+    font-weight: var(--font-weight-normal);
+    font-family: var(--font-family-1);
     transition: 0.3s ease;
 }
 
 .footer-navigation a:hover {
-	color: var(--color-text-light);
-	text-shadow: 0 0 8px rgb(252, 252, 252);
+	text-shadow: 0 0 12px var(--color-text-hover);
+}
+
+.footer-navigation  .footer-loc:hover {
+	text-shadow: none;
 }
 
 .footer-navigation i img {
 	height: 7rem;
 	width: auto;
 	display: flex;
-	margin-left: -0.8rem;
-	margin-bottom: 0.5rem;
+	margin-bottom: 1.5rem;
 }
 
 .footer-navigation p {
 	font-size: 1.6rem;
 	line-height: 1.5;
-	color: var(--color-text-dark);
-	font-weight: var(--font-weight-normal);
+	color: var(--color-text-hover);
+    font-weight: var(--font-weight-normal);
+    font-family: var(--font-family-1);
+}
+
+.footer-navigation .item-1 p {
+	padding-right: 7rem;
 }
 
 .footer-navigation .item-1 {
-	width: 25%;
+	width: 40%;
 	height: 16.5rem;
 }
 
 .footer-navigation .item-2 {
-	width: 25%;
+	width: 30%;
 	height: 16.5rem;
 }
 
 .footer-navigation .item-3 {
-	width: 25%;
+	width: 30%;
 	height: 16.5rem;
 }
-
-.footer-navigation .item-4 {
-	width: 25%;
-	height: 16.5rem;
-	gap: 1.5rem;
-	padding-right: 3rem;
-}
-
-
 
 .footer-copyright {
-	height: auto;
 	width: 100%;
-	padding: 3rem 0;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 }
 
-.footer-copyright .copyright-text p {
+.footer-copyright p {
 	font-size: 1.6rem;
-	color: var(--color-text-dark);
-	font-weight: var(--font-weight-normal);
-	text-align: left;
+	color: var(--color-text-hover);
+    font-weight: var(--font-weight-normal);
 }
 
 .footer-copyright a {
 	font-size: 1.6rem;
 	color: var(--color-primary);
-	font-weight: var(--font-weight-normal);
-	text-align: left;
-	transition: 0.3s ease;
+    font-weight: var(--font-weight-normal);
+    transition: 0.3s ease;
 }
 
 .footer-copyright a:hover {
-	text-shadow: 0 0 8px var(--color-primary);
+	text-shadow: 0 0 12px var(--color-primary);
 }
 
 /*  834px - 1068px - Laptop Footer */
 @media screen and (min-width: 834px) and (max-width: 1068px) {
+	.footer-navigation .item-1 p {
+		padding-right: 4rem;
+	}
 
 }
 
 
 /*  576px - 833px - Tablet Footer */
 @media screen and (min-width: 576px) and (max-width: 833px) {
-
-	/* Navigation Section */
-	.footer-navigation .item-title {
-		font-size: 1.6rem;
-		line-height: 2;
+	.footer-content {
+		padding: 2.5rem;
 	}
 
-	.footer-navigation a {
+	.footer-navigation {
+		margin-bottom: 3rem;
+	}
+
+	.footer-navigation .item-title {
+		font-size: 1.6rem;
+	}
+
+	.footer-navigation a,
+	.footer-copyright a,
+	.footer-navigation p,
+	.footer-copyright p {
 		font-size: 1.4rem;
-		line-height: 2;
+	}
+
+	.footer-navigation .item-1 p {
+		padding-right: 0rem;
 	}
 
 	.footer-navigation i img {
 		height: 5rem;
-		margin-left: -0.5rem;
 	}
 
-	.footer-navigation p {
-		font-size: 1.4rem;
+	.footer-navigation .item-1 {
+		width: 35%;
+		height: 16.5rem;
 	}
 
-	/* Copyright Section */
-	.footer-copyright .copyright-text p {
-		font-size: 1.4rem;
-		padding-bottom: 1rem;
+	.footer-navigation .item-2 {
+		width: 18%;
+		height: 16.5rem;
 	}
 
-	.footer-copyright .copyright-text a {
-		font-size: 1.4rem;
+	.footer-navigation .item-3 {
+		width: 30%;
+		height: 16.5rem;
 	}
+
 }
 
 /*  575px and Lower - Mobile Footer */
 @media screen and (max-width: 575px) {
+	.footer-content {
+		padding: 2.5rem;
+	}
 
-	/* Navigation Section */
 	.footer-navigation {
-		align-items: center;
-		justify-content: center;
+		margin-bottom: 3rem;
+		flex-direction: column;
 	}
 
 	.footer-navigation .item-title {
 		font-size: 1.6rem;
-		line-height: 2.2
 	}
 
-	.footer-navigation a {
+	.footer-navigation a,
+	.footer-copyright a,
+	.footer-navigation p,
+	.footer-copyright p {
 		font-size: 1.4rem;
-		line-height: 2.2
+	}
+
+	.footer-navigation .item-1 p {
+		padding-right: 0rem;
+	}
+
+	.footer-navigation i img {
+		height: 5rem;
 	}
 
 	.footer-navigation .item-1 {
-		width: 30%;
-	}
-	.footer-navigation .item-2 {
-		width: 30%;
-	}
-	.footer-navigation .item-3 {
-		width: 40%;
-	}
-
-	.footer-navigation .item-4 {
-		display: none;
-	}
-
-	/* Copyright Section */
-	.footer-copyright .copyright-text {
 		width: 100%;
-		display: flex;
+		height: auto;
+		margin-bottom: 1.5rem;
+	}
+
+	.footer-navigation .item-2 {
+		width: 100%;
+		height: auto;
+		margin-bottom: 1.5rem;
+	}
+
+	.footer-navigation .item-3 {
+		width: 100%;
+		height: auto;
+		margin-bottom: 1.5rem;
+	}
+
+	.footer-copyright {
 		flex-direction: column;
-		justify-content: space-between;
 		align-items: flex-start;
-	}
-
-	.footer-copyright .copyright-text p {
-		font-size: 1.4rem;
-		padding-bottom: 1rem;
-	}
-
-	.footer-copyright .copyright-text a {
-		font-size: 1.4rem;
 	}
 }
