--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,21 +3,18 @@
 @import './__grid.css';
 @import './__utilities.css';
 @import './__buttons-icons.css';
-@import './__animations.css';
-@import './__announcement.css';
 @import './_header.css';
-@import './_main.css';
 @import './_footer.css';
-@import './_tos.css';
+@import './_main.css';
+@import './_about.css';
+@import './_what-can-i-earn.css';
+@import './_what-is-liquid-staking.css';
 
 /* Fonts - Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Montserrat:wght@400;700;900&family=Urbanist:wght@400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Poppins:wght@400;600&display=swap');
 
 /* Icons - Font Awesome */
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.css');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.js');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js');
-
-/* Sellix - Sellix Integration */
-@import url('https://cdn.sellix.io/static/css/embed.css');
