--- a/assets/css/_main.css
+++ b/assets/css/_main.css
@@ -86,6 +86,18 @@
     background-color: var(--color-primary);
 }
 
+.hero-eclipse-2 {
+    position: absolute;
+    top: 130px;
+    left: 30px;
+    z-index: -997;
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+    filter: blur(150px);
+    background-color: var(--color-secondary);
+}
+
 .defi-eclipse {
     position: absolute;
     top: 0;
@@ -107,6 +119,7 @@
 }
 
 .hero-img {
+    position: relative;
     width: 40%;
     height: auto;
     display: flex;
