--- a/assets/css/__reboot.css
+++ b/assets/css/__reboot.css
@@ -65,14 +65,11 @@ img {
     --color-border: rgba(247, 247, 248, 0.149);
     --color-background: rgb(238,239,242);
     --color-eclipse: rgb(139, 181, 189);
-    
     --color-dark: #272E35;
     --color-dark-hover: rgb(110, 117, 125);
-
     --color-text-dark: rgb(105, 121, 134);
     --color-text-hover: rgb(203, 203, 204);
     --color-text-light: rgb(252, 252, 252);
-
     --color-linear-1: linear-gradient(to left, var(--color-primary), var(--color-secondary));
     --color-linear-1-2: linear-gradient(to right, var(--color-primary), var(--color-secondary));
     --color-linear-2: linear-gradient(250deg, var(--color-dark) 90%, var(--color-primary) 100%);
@@ -89,15 +86,15 @@ img {
 
 /* Scrollbar Starting */
 ::-webkit-scrollbar {
-    width: 4px;
+    width: 5px;
 }
 
 ::-webkit-scrollbar-track {
-    background: var(--color-dark);
+    background: var(--color-background);
 }
 
 ::-webkit-scrollbar-thumb {
-    background: linear-gradient(0deg, var(--color-btn-dark) 0%, var(--color-secondary) 50%, var(--color-btn-dark) 100%);
+    background: linear-gradient(0deg, var(--color-eclipse) 0%, var(--color-secondary) 50%, var(--color-eclipse) 100%);
     -webkit-border-radius: 50px;
     -webkit-box-shadow: 0 2px 5px var(--color-dark);
 }
