--- a/assets/css/__reboot.css
+++ b/assets/css/__reboot.css
@@ -90,7 +90,7 @@ img {
 }
 
 ::-webkit-scrollbar-track {
-    background: var(--color-background);
+    background: var(--color-dark);
 }
 
 ::-webkit-scrollbar-thumb {
