--- a/assets/css/_main.css
+++ b/assets/css/_main.css
@@ -702,6 +702,12 @@
     border-radius: 24px;
     background: var(--color-background);
     box-shadow: 0 8px 16px var(--color-text-dark);
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.defi-img .defi-logo:hover {
+    transform: scale(1.1);
 }
 
 .defi-img .defi-logo:not(:last-child) {
