--- a/assets/css/_main.css
+++ b/assets/css/_main.css
@@ -162,7 +162,9 @@
 
 .hero-buttons {
     display: flex;
+    flex-direction: row;
     margin-top: 4rem;
+    gap: 1rem;
 }
 
 /* Liquid Section */
@@ -302,7 +304,7 @@
     display: flex;
     flex-direction: row;
     margin-top: 4rem;
-    gap: 0.8rem;
+    gap: 1rem;
 }
 
 
@@ -1158,8 +1160,9 @@
     }
 
     .hero-content .hero-buttons {
-        margin-top: 2.5rem;
         justify-content: center;
+        flex-wrap: wrap;
+        margin-top: 2.5rem;
     }
 
     .hero-buttons a {
@@ -1203,7 +1206,7 @@
         margin-top: 2rem;
     }
 
-    .liquid .card .left .liquid-buttons .btn {
+    .liquid .card .left .liquid-buttons a {
         width: 100%;
     }
 
