--- a/assets/css/__buttons-icons.css
+++ b/assets/css/__buttons-icons.css
@@ -14,6 +14,12 @@
     cursor: pointer;
 }
 
+/* EthTracker button Starting*/
+.btn-ethtracker {
+    color: var(--color-dark);
+    padding: 0rem;
+}
+
 /* Header button Starting*/
 .btn-header {
     background: var(--color-primary);
@@ -29,7 +35,6 @@
     border: 2px solid var(--color-primary);
     background: var(--color-primary);
     color: var(--color-dark);
-    padding: 2rem 4rem;
 }
 
 .btn-hero:hover {
@@ -98,6 +103,13 @@
 }
 
 /* Icons Starting */
+.eth-icon {
+    font-size: 2rem;
+    color: var(--color-dark);
+    margin-right: 1rem;
+    transition: 0.3s ease;
+}
+
 .tw-icon {
     font-size: 1.6rem;
     color: var(--color-dark);
